@@ -29,7 +29,6 @@ import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.math.BigInteger;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Vector;
 
 import javax.xml.parsers.DocumentBuilder;
@@ -56,7 +55,7 @@ import megamek.common.SmallCraft;
 import megamek.common.WeaponType;
 import megamek.common.weapons.bayweapons.BayWeapon;
 import mekhq.MekHqXmlUtil;
-import mekhq.Version;
+import megamek.Version;
 import mekhq.campaign.Campaign;
 import mekhq.campaign.CampaignOptions;
 import mekhq.campaign.Quartermaster;
@@ -82,9 +81,9 @@ public class EquipmentPartTest {
         boolean isOmniPodded = false;
         EquipmentType type = mock(EquipmentType.class);
         doReturn(equipTonnage).when(type).getTonnage(any(), eq(size));
-        
+
         EquipmentPart equipmentPart = new EquipmentPart(tonnage, type, equipmentNum, size, isOmniPodded, mockCampaign);
-        
+
         assertEquals(tonnage, equipmentPart.getUnitTonnage());
         assertEquals(type, equipmentPart.getType());
         assertEquals(equipmentNum, equipmentPart.getEquipmentNum());
@@ -95,7 +94,7 @@ public class EquipmentPartTest {
 
         isOmniPodded = true;
         equipmentPart = new EquipmentPart(tonnage, type, equipmentNum, size, isOmniPodded, mockCampaign);
-        
+
         assertEquals(tonnage, equipmentPart.getUnitTonnage());
         assertEquals(type, equipmentPart.getType());
         assertEquals(equipmentNum, equipmentPart.getEquipmentNum());
@@ -104,7 +103,7 @@ public class EquipmentPartTest {
         assertEquals(equipTonnage, equipmentPart.getTonnage(), 0.001);
         assertEquals(mockCampaign, equipmentPart.getCampaign());
     }
-    
+
     @Test
     public void cloneTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -116,9 +115,9 @@ public class EquipmentPartTest {
         boolean isOmniPodded = false;
         EquipmentType type = mock(EquipmentType.class);
         doReturn(equipTonnage).when(type).getTonnage(any(), eq(size));
-        
+
         EquipmentPart equipmentPart = new EquipmentPart(tonnage, type, equipmentNum, size, isOmniPodded, mockCampaign);
-        
+
         EquipmentPart clone = equipmentPart.clone();
 
         assertEquals(equipmentPart.getUnitTonnage(), clone.getUnitTonnage());
@@ -133,7 +132,7 @@ public class EquipmentPartTest {
         equipmentPart = new EquipmentPart(tonnage, type, equipmentNum, size, isOmniPodded, mockCampaign);
 
         clone = equipmentPart.clone();
-        
+
         assertEquals(equipmentPart.getUnitTonnage(), clone.getUnitTonnage());
         assertEquals(equipmentPart.getType(), clone.getType());
         assertEquals(equipmentPart.getEquipmentNum(), clone.getEquipmentNum());
@@ -154,7 +153,7 @@ public class EquipmentPartTest {
         boolean isOmniPodded = false;
         EquipmentType type = mock(EquipmentType.class);
         doReturn(equipTonnage).when(type).getTonnage(any(), eq(size));
-        
+
         EquipmentPart equipmentPart = new EquipmentPart(tonnage, type, equipmentNum, size, isOmniPodded, mockCampaign);
 
         MissingEquipmentPart missingPart = equipmentPart.getMissingPart();
@@ -208,7 +207,7 @@ public class EquipmentPartTest {
         assertFalse(equipmentPart.isPartForEquipmentNum(equipmentNum, Aero.LOC_RWING));
         assertFalse(equipmentPart.isPartForEquipmentNum(equipmentNum - 1, location));
     }
-    
+
     @Test
     public void isOmniPoddableTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -419,7 +418,7 @@ public class EquipmentPartTest {
         int location = Mech.LOC_RT;
         when(mounted.getLocation()).thenReturn(location);
         doReturn(mounted).when(entity).getEquipment(eq(equipmentNum));
-        
+
         doReturn(location).when(entity).getLocationFromAbbr(eq(locationName));
 
         // Our location should match up
@@ -490,7 +489,7 @@ public class EquipmentPartTest {
 
         // Get the EquipmentPart XML
         String xml = sw.toString();
-        assertFalse(xml.trim().isEmpty());
+        assertFalse(xml.isBlank());
 
         // Using factory get an instance of document builder
         DocumentBuilder db = MekHqXmlUtil.newSafeDocumentBuilder();
@@ -502,7 +501,7 @@ public class EquipmentPartTest {
         assertEquals("part", partElt.getNodeName());
 
         // Deserialize the EquipmentPart
-        Part deserializedPart = Part.generateInstanceFromXML(partElt, new Version("1.0.0"));
+        Part deserializedPart = Part.generateInstanceFromXML(partElt, new Version());
         assertNotNull(deserializedPart);
         assertTrue(deserializedPart instanceof EquipmentPart);
 
@@ -516,7 +515,7 @@ public class EquipmentPartTest {
         assertEquals(equipmentPart.getSize(), deserialized.getSize(), 0.001);
         assertEquals(equipmentPart.getTonnage(), deserialized.getTonnage(), 0.001);
     }
-    
+
     @Test
     public void removeTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -568,7 +567,7 @@ public class EquipmentPartTest {
 
         verify(unit, times(1)).destroySystem(eq(CriticalSlot.TYPE_EQUIPMENT), eq(equipmentNum));
         verify(unit, times(1)).removePart(eq(equipmentPart));
-        
+
         ArgumentCaptor<Part> missingPartCaptor = ArgumentCaptor.forClass(Part.class);
         verify(unit, times(1)).addPart(missingPartCaptor.capture());
 
@@ -581,7 +580,7 @@ public class EquipmentPartTest {
         assertEquals(unit, missingEquipmentPart.getUnit());
         assertTrue(warehouse.getParts().contains(missingEquipmentPart));
     }
-    
+
     @Test
     public void salvageTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -633,7 +632,7 @@ public class EquipmentPartTest {
 
         verify(unit, times(1)).destroySystem(eq(CriticalSlot.TYPE_EQUIPMENT), eq(equipmentNum));
         verify(unit, times(1)).removePart(eq(equipmentPart));
-        
+
         ArgumentCaptor<Part> missingPartCaptor = ArgumentCaptor.forClass(Part.class);
         verify(unit, times(1)).addPart(missingPartCaptor.capture());
 
@@ -646,7 +645,7 @@ public class EquipmentPartTest {
         assertEquals(unit, missingEquipmentPart.getUnit());
         assertTrue(warehouse.getParts().contains(missingEquipmentPart));
     }
-    
+
     @Test
     public void needsFixingTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -656,7 +655,7 @@ public class EquipmentPartTest {
         doReturn(1.0).when(type).getTonnage(any(), anyDouble());
 
         EquipmentPart equipmentPart = new EquipmentPart(75, type, 6, size, false, mockCampaign);
-        
+
         assertFalse(equipmentPart.needsFixing());
 
         equipmentPart.setHits(1);
@@ -820,7 +819,11 @@ public class EquipmentPartTest {
         // Location destroyed
         doReturn(false).when(unit).isLocationBreached(eq(location));
         doReturn(true).when(unit).isLocationDestroyed(eq(location));
-        assertNotNull(equipmentPart.checkFixable());
+        // CAW: this should be non-null in a perfect world, but because
+        //      MekHQ automagically switches to salvage mode when the
+        //      location is destroyed, this should return null.
+        //      See: https://github.com/MegaMek/mekhq/issues/2387
+        assertNull(equipmentPart.checkFixable());
 
         String secondaryLocationName = "Mech Left Arm";
         int secondaryLocation = Mech.LOC_LARM;
@@ -840,7 +843,11 @@ public class EquipmentPartTest {
         // Location destroyed
         doReturn(false).when(unit).isLocationBreached(eq(secondaryLocation));
         doReturn(true).when(unit).isLocationDestroyed(eq(secondaryLocation));
-        assertNotNull(equipmentPart.checkFixable());
+        // CAW: this should be non-null in a perfect world, but because
+        //      MekHQ automagically switches to salvage mode when the
+        //      location is destroyed, this should return null.
+        //      See: https://github.com/MegaMek/mekhq/issues/2387
+        assertNull(equipmentPart.checkFixable());
 
         // Restore both locations
         doReturn(false).when(unit).isLocationBreached(eq(location));
@@ -1494,7 +1501,7 @@ public class EquipmentPartTest {
         verify(weaponBay, times(1)).setRepairable(eq(true));
         verify(unit, times(1)).destroySystem(eq(CriticalSlot.TYPE_EQUIPMENT), eq(bayEqNum));
     }
-    
+
     @Test
     public void checkWeaponBayWeaponRemovedOthersOkayTest() {
         Campaign mockCampaign = mock(Campaign.class);
